# vocalype

./: .clineignore  .env  .gitattributes  .gitignore  AGENTS.md  AGENT_MISSION.md  AUTH_SETUP.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  CRUSH.md  Creer_Context_DeepSeek.bat  Enregistrer_Resultat.bat  FORKS.md  Generer_Mission_Claude.bat  Lancer_Agent_Vocalype_Auto.bat  Lancer_Vocalype_Brain.bat  PRIVACY.md  PRODUCT_REQUIREMENTS.md  README.md  RELEASE_CHECKLIST.md  Stop_Vocalype_Brain.bat  Vocalype_Product_Reality.md  Voir_Action_du_Robot.bat  Voir_Rapport_Vocalype_Brain.bat  Voir_Rapports_Vocalype_Brain.bat  agent_loop.ps1  cargo-check-warnings-after.txt  cargo-check-warnings.txt  cargo-test-warnings-after.txt  clear-icon-cache.bat  design-tokens.md  eslint.config.js  flake.nix  index.html  launch.err  launch.out  mockup-style-sortie.html  (+4 more)
src-tauri/: Cargo.toml  Info.plist  README.md  installer-hooks.nsi  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/evals/: README.md
src-tauri/evals/parakeet/: EXPERIMENT_HISTORY.md  EXTERNAL_DATASET_PLAN.md  FRIENDS_PACK_ES_HI_PT.md  FRIENDS_PACK_ES_PT.md  LONG_FORM_PACK_EN_FR.md  NATURAL_PACK_24.md  NATURAL_PACK_26_SCRIPT.md  README.md  RECRUITING_PACK_32.md  ROBOT_TASK_LIST.md  analyze_errors.ps1  dataset_manifest.json  dataset_manifest_combined_current.json  dataset_manifest_english_20.json  dataset_manifest_english_20.legacy-dev.json  dataset_manifest_hindi_10.json  dataset_manifest_long_form_18.json  dataset_manifest_long_form_18.legacy-dev.json  dataset_manifest_natural_24.json  dataset_manifest_natural_24.legacy-dev.json  dataset_manifest_portuguese_10.json  dataset_manifest_recruiting_32.json  dataset_manifest_smoke.json  dataset_manifest_spanish_10.json  external-fleurs-supported-400-no-hi-chunk20.json  external-fleurs-supported-400-no-hi-chunk60.json  external-fleurs-supported-400-no-hi-recovery-v2.json  external-fleurs-supported-400-no-hi-recovery-v4-aggressive.json  external-fleurs-supported-400-no-hi-recovery-v5-synced.json  parakeet-pipeline-eval-20260412-local70-no-builtin-parakeet-targeted.json  parakeet-pipeline-eval-20260413-local70-chunk10.json  parakeet-pipeline-eval-20260413-local70-chunk14.json  parakeet-pipeline-eval-20260413-local70-chunk60.json  parakeet-pipeline-eval-20260413-local70-dedup-fillers-v1.json  parakeet-pipeline-eval-20260413-local70-recovery-v2.json  parakeet-pipeline-eval-20260414-local70-final-silence.json  parakeet-pipeline-eval-20260414-local70-fr-punct.json
src-tauri/evals/postprocess/: README.md  postprocess-benchmark-20260505-200340.json  postprocess-benchmark-20260505-230608.json  postprocess-benchmark-20260505-232256.json  postprocess-benchmark-20260505-final.json  postprocess-benchmark-20260506-204108.json  postprocess-benchmark-20260506-213019.json  postprocess-benchmark-20260506-214202.json  postprocess-benchmark-20260506-215834.json  postprocess-benchmark-comparison-cloud-4models-deployed.json  postprocess-benchmark-comparison-cloud-4models-live.json  postprocess-benchmark-comparison-cloud-4models.json  postprocess-benchmark-comparison-cloud-5models-live.json  postprocess-benchmark-comparison-cloud-5models-nothink-local.json  postprocess-benchmark-comparison-cloud-5models-reordered.json
src-tauri/examples/: parakeet_eou_smoke.rs  parakeet_eval.rs  parakeet_pipeline_eval.rs  parakeet_short_path_bench.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: model_catalog.json
src-tauri/src/: actions.rs  cli.rs  clipboard.rs  command_mode.rs  context_detector.rs  dictionary.rs  error.rs  filler.rs  gemini_client.rs  integrity.rs  lib.rs  license.rs  llm_client.rs  main.rs  model_crypto.rs  prompt_builder.rs  punctuation.rs  runtime_observability.rs  secret_store.rs  secrets.rs  settings.rs  startup_warmup.rs  tray.rs  voice_profile.rs
src-tauri/src/actions/: agent.rs  meeting.rs  model_selection.rs  note.rs  paste.rs  post_processing.rs  profiler.rs  transcribe.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/commands/: agent.rs  app_context.rs  audio.rs  cloud_stt.rs  corrections.rs  dictionary.rs  gemini.rs  history.rs  llama_server.rs  meetings.rs  mod.rs  models.rs  notes.rs  ollama.rs  report.rs  snippets.rs  transcription.rs
src-tauri/src/eval/: dataset.rs  metrics.rs  mod.rs  postprocess_benchmark.rs  report.rs
src-tauri/src/llm/: deepgram_stt_client.rs  gemini_client.rs  groq_stt_client.rs  llama_server.rs  llm_client.rs  mistral_stt_client.rs  mod.rs  prompt_builder.rs
src-tauri/src/managers/: audio.rs  history.rs  meetings.rs  mod.rs  model.rs  model_catalog.rs  notes.rs  transcription.rs
src-tauri/src/platform/: agent_overlay.rs  audio_feedback.rs  clipboard.rs  clipboard_monitor.rs  cursor_context.rs  input.rs  media_control.rs  mod.rs  overlay.rs  smart_paste.rs  utils.rs
src-tauri/src/processing/: code_dictation.rs  dictionary.rs  (+5 more)
(+986 files in other folders)
