[package]
name = "vocalype"
version = "0.7.22"
description = "vocalype"
authors = ["cjpais"]
edition = "2021"
license = "MIT"
default-run = "vocalype"

[profile.dev]
incremental = true

[profile.dev.package.whisper-rs]
opt-level = 3

[profile.dev.package.whisper-rs-sys]
opt-level = 3

[profile.dev.package.transcribe-rs]
opt-level = 3

[profile.dev.package.parakeet-rs]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vocalype_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
url = "2"
tauri = { version = "2.9.1", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
  "devtools",
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Fork: rustdesk-org fork with Windows/macOS stability fixes — see ../FORKS.md
# TODO: rdev has zero direct `use rdev` imports; may be redundant (pulled in
#       transitively by handy-keys). Verify and remove if confirmed unused.
rdev = { git = "https://github.com/rustdesk-org/rdev", rev = "a90dbe1172f8832f54c97c62e823c5a34af5fdfe" }
cpal = "0.16.0"
anyhow = "1.0.95"
thiserror = "1"
rubato = "0.16.2"
hound = "3.5.1"
base64 = "0.22"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
# Fork: cjpais fork with Silero VAD v4 support — see ../FORKS.md
vad-rs = { git = "https://github.com/cjpais/vad-rs", rev = "88b3a01f72f83a5d80d0e7ea9bacfc0d897fd03f", default-features = false }
enigo = "0.6.1"
# Fork: cjpais fork with audio device patches — see ../FORKS.md
rodio = { git = "https://github.com/cjpais/rodio.git", rev = "fed30292db417cb95305c118c0e1d804fb74cbff" }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
rustfft = "6.4.0"
strsim = "0.11.0"
whichlang = "0.1"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
sha2 = "0.10"
chacha20poly1305 = "0.10"
ring = "0.17"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
sysinfo = "0.37"
transcribe-rs = { version = "0.2.5", features = ["whisper", "parakeet", "moonshine", "sense_voice"] }
parakeet-rs = "0.2.0"
native-shortcut-capture-backend = { package = "handy-keys", version = "0.2.1" }
ferrous-opencc = "0.2.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.9.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Power",
  "Win32_System_Threading",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Accessibility",
] }
wmi = "0.14"
parakeet-rs = { version = "0.2.0", features = ["directml", "openvino", "qnn"] }
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
transcribe-rs = { path = "vendor/transcribe-rs" }
parakeet-rs = { path = "vendor/parakeet-rs" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
